# patent2pic

./: .gitignore  DEVELOPMENT_RULES.md  Patent2Pic-功能特性与工作流程.pptx  README.md  index.html  nsis-installer.nsi  package-lock.json  package.json  tsconfig.json  vite.config.ts
.trae/rules/: project_rules.md
docs/: AI-API调用参考.md  TRAE云端环境配置教程.md  Windows打包流程规范.md  user-manual.html  writing-specification.html  方法类权利要求功能说明.md  说明书撰写规范.md  说明书更新与生成必读项.md
nsis-build/: nsis-installer.nsi  首次使用教程.txt
portable-build/: 使用说明.txt  首次使用教程.txt
ppt-workspace/: create_slides.cjs
ppt-workspace/pptxgenjs_helpers/: index.cjs  layout_builders.cjs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/assets/styles/: global.css  theme.css
src/components/ai/: AIConfigDialog.vue  PromptSettings.vue
src/components/canvas/: CanvasToolbar.vue  GraphCanvas.vue  GraphLegend.vue  TabBar.vue
src/components/common/: CellEditDialog.vue
src/components/input/: ClaimInput.vue  ClaimReader.vue
src/components/layout/: AppLayout.vue  TitleBar.vue
src/components/panel/: StylePanel.vue
src/composables/: useAIExtract.ts  useAITranslation.ts  useAutoSave.ts  useExport.ts  useExportExcel.ts  useExportHTML.ts  useGraph.ts  useKeyboard.ts  useParallelExtract.ts  useProjectFile.ts
src/services/ai/: client.ts  (+3 more)
src/stores/: ai.ts  claim.ts  editor.ts  graph.ts  translation.ts
src/types/: ai.ts  app.ts  claim.ts  graph.ts  translation.ts
src/utils/: claim-type.ts  id.ts  timing.ts
(+16 files in other folders)
